--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
             <img src="img/icons/logo.svg" alt="logo">
         </a>
         <h1 class="ba-title">working </br> with design lab</h1>
-        <p class="ba-desc">We’ve been helping startups launch and grow their businesses.</br> We help you to fill the gap between development,</br>
-design and product management.</p>
+        <p class="ba-desc">We’ve been helping startups launch and grow their businesses.</br> We help you to fill the
+            gap between development,</br>
+            design and product management.</p>
         <a href="#about" class="ba-scroll"><img src="img/icons/scroll.svg" alt="scroll"></a>
     </div>
 </header>
 
 <main class="ba-main">
-    <section class="ba-about" id="about">
+    <section class="ba-section ba-section--about" id="about">
         <div class="ba-container">
             <div class="ba-box">
                 <h3 class="ba-box__title">about us</h3>
@@ -29,6 +30,7 @@ design and product management.</p>
                     When you work with us, you are part of a team of committed collaborators.
                     All aspects of our software development process are integrated, iterative and agile.
                 </p>
+                </br>
                 <p>
                     Our approach unifies design, development and
                     product management to create exceptional products.
@@ -39,6 +41,131 @@ design and product management.</p>
             </div>
         </div>
     </section>
+
+    <section class="ba-section ba-section--services">
+        <div class="ba-container">
+            <div class="ba-box">
+                <h3 class="ba-box__title">services</h3>
+                <p>
+                    Before we sign a contract or write a line of code our team will spend the neces-sary time needed to
+                    understand your product vision.
+                </p>
+                <p>
+                    The outcome of this scoping session is a proposal or high-level statement of work.
+                </p>
+                <p>
+                    Based on your requirements, we can provide a complete offering or just the pieces you need.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="ba-section ba-section--whatWeDo">
+        <div class="ba-container">
+            <div class="ba-box">
+                <h3 class="ba-box__title">what we do</h3>
+                <div class="ba-box__elem">
+                    <svg class="ba-elem__img" viewBox="0 0 79.969 83.03">
+                        <path d="M994.956,2434.99H983.032a2.015,
+                        2.015,0,0,0-2.025,2.02v4.17H932.86v-4.17a2.015,2.015,0,0,
+                        0-2.024-2.02H919.024a2.015,2.015,0,0,0-2.025,2.02v12.27a2.015,
+                        2.015,0,0,0,2.025,2.02h11.924a2.015,2.015,0,0,0,2.025-2.02v-4.17h22.161c-0.225,
+                        4.95-12.262,28.24-19.911,41.97a2.073,2.073,0,0,0,.45,2.47c6.862,5.85,8.549,11.59,
+                        9,14.52h-2.587a2.015,2.015,0,0,0-2.025,2.02v9.9a2.018,2.018,0,0,0,2.025,2.03h29.923a2.018,
+                        2.018,0,0,0,2.025-2.03v-9.9a2.015,2.015,0,0,0-2.025-2.02H969.42c0.45-2.93,2.138-8.67,9-14.52a2.045,
+                        2.045,0,0,0,.45-2.47c-7.65-13.73-19.686-37.13-19.911-41.97h22.048v4.17a2.015,2.015,0,0,0,2.025,
+                        2.02h11.924a2.015,2.015,0,0,0,2.025-2.02v-12.27A2.015,2.015,0,0,0,994.956,2434.99Zm-66.033,
+                        12.26h-7.987v-8.32h7.987v8.32Zm28.123,32.97a2.585,2.585,0,1,1-2.587,2.58A2.689,2.689,0,0,1,
+                        957.046,2480.22Zm13.049,33.64H944.11v-5.97H970.1v5.97Zm-4.612-9.91H948.609c-0.45-3.26-2.137-9.78-9.224-16.42,
+                        2.7-4.95,10.8-19.8,15.636-30.83v19.92a6.439,6.439,0,0,0-4.5,6.18,6.525,6.525,0,1,0,8.549-6.18v-20.03c4.95,
+                        11.03,12.937,25.88,15.636,30.94C967.621,2494.17,965.933,2500.69,965.483,
+                        2503.95Zm27.561-56.7h-7.987v-8.21h7.987v8.21Z" transform="translate(-917 -2435)"/>
+                    </svg>
+                    <span class="ba-elem__title">design</span>
+                    <p>
+                        Our design practice offers a full range of services including branding strategy,
+                        interaction and visual design and user experience testing.
+                    </p>
+                    <p>
+                        Throughout your project, our designers create and implement visual designs and
+                        workflows, solicit user feedback, and work with you to make sure what gets built is what is needed.
+                    </p>
+                </div>
+
+                <div class="ba-box__elem">
+                    <svg class="ba-elem__img" viewBox="0 0 79.969 83.03">
+                        <path d="M994.956,2434.99H983.032a2.015,
+                        2.015,0,0,0-2.025,2.02v4.17H932.86v-4.17a2.015,2.015,0,0,
+                        0-2.024-2.02H919.024a2.015,2.015,0,0,0-2.025,2.02v12.27a2.015,
+                        2.015,0,0,0,2.025,2.02h11.924a2.015,2.015,0,0,0,2.025-2.02v-4.17h22.161c-0.225,
+                        4.95-12.262,28.24-19.911,41.97a2.073,2.073,0,0,0,.45,2.47c6.862,5.85,8.549,11.59,
+                        9,14.52h-2.587a2.015,2.015,0,0,0-2.025,2.02v9.9a2.018,2.018,0,0,0,2.025,2.03h29.923a2.018,
+                        2.018,0,0,0,2.025-2.03v-9.9a2.015,2.015,0,0,0-2.025-2.02H969.42c0.45-2.93,2.138-8.67,9-14.52a2.045,
+                        2.045,0,0,0,.45-2.47c-7.65-13.73-19.686-37.13-19.911-41.97h22.048v4.17a2.015,2.015,0,0,0,2.025,
+                        2.02h11.924a2.015,2.015,0,0,0,2.025-2.02v-12.27A2.015,2.015,0,0,0,994.956,2434.99Zm-66.033,
+                        12.26h-7.987v-8.32h7.987v8.32Zm28.123,32.97a2.585,2.585,0,1,1-2.587,2.58A2.689,2.689,0,0,1,
+                        957.046,2480.22Zm13.049,33.64H944.11v-5.97H970.1v5.97Zm-4.612-9.91H948.609c-0.45-3.26-2.137-9.78-9.224-16.42,
+                        2.7-4.95,10.8-19.8,15.636-30.83v19.92a6.439,6.439,0,0,0-4.5,6.18,6.525,6.525,0,1,0,8.549-6.18v-20.03c4.95,
+                        11.03,12.937,25.88,15.636,30.94C967.621,2494.17,965.933,2500.69,965.483,
+                        2503.95Zm27.561-56.7h-7.987v-8.21h7.987v8.21Z" transform="translate(-917 -2435)"/>
+                    </svg>
+                    <span class="ba-elem__title">development</span>
+                    <p>
+                        All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                        They collaborate with your team to write, test, and improve code on a daily basis, using proven practices such as test-driven development and pair programing.
+                    </p>
+                </div>
+
+                <div class="ba-box__elem">
+                    <svg class="ba-elem__img" viewBox="0 0 79.969 83.03">
+                        <path d="M994.956,2434.99H983.032a2.015,
+                        2.015,0,0,0-2.025,2.02v4.17H932.86v-4.17a2.015,2.015,0,0,
+                        0-2.024-2.02H919.024a2.015,2.015,0,0,0-2.025,2.02v12.27a2.015,
+                        2.015,0,0,0,2.025,2.02h11.924a2.015,2.015,0,0,0,2.025-2.02v-4.17h22.161c-0.225,
+                        4.95-12.262,28.24-19.911,41.97a2.073,2.073,0,0,0,.45,2.47c6.862,5.85,8.549,11.59,
+                        9,14.52h-2.587a2.015,2.015,0,0,0-2.025,2.02v9.9a2.018,2.018,0,0,0,2.025,2.03h29.923a2.018,
+                        2.018,0,0,0,2.025-2.03v-9.9a2.015,2.015,0,0,0-2.025-2.02H969.42c0.45-2.93,2.138-8.67,9-14.52a2.045,
+                        2.045,0,0,0,.45-2.47c-7.65-13.73-19.686-37.13-19.911-41.97h22.048v4.17a2.015,2.015,0,0,0,2.025,
+                        2.02h11.924a2.015,2.015,0,0,0,2.025-2.02v-12.27A2.015,2.015,0,0,0,994.956,2434.99Zm-66.033,
+                        12.26h-7.987v-8.32h7.987v8.32Zm28.123,32.97a2.585,2.585,0,1,1-2.587,2.58A2.689,2.689,0,0,1,
+                        957.046,2480.22Zm13.049,33.64H944.11v-5.97H970.1v5.97Zm-4.612-9.91H948.609c-0.45-3.26-2.137-9.78-9.224-16.42,
+                        2.7-4.95,10.8-19.8,15.636-30.83v19.92a6.439,6.439,0,0,0-4.5,6.18,6.525,6.525,0,1,0,8.549-6.18v-20.03c4.95,
+                        11.03,12.937,25.88,15.636,30.94C967.621,2494.17,965.933,2500.69,965.483,
+                        2503.95Zm27.561-56.7h-7.987v-8.21h7.987v8.21Z" transform="translate(-917 -2435)"/>
+                    </svg>
+                    <span class="ba-elem__title">product management</span>
+                    <p>
+                        Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="ba-block">
+        <div class="ba-row">
+            <div class="ba-width-1-3 ba-block__item">
+                <img src="img/backgrounds/item1.jpg" alt=""><span class="ba-block__title"></span>
+            </div>
+            <div class="ba-width-1-3 ba-block__item">
+                <img src="img/backgrounds/item2.jpg" alt=""><span class="ba-block__title"></span>
+            </div>
+            <div class="ba-width-1-3 ba-block__item">
+                <img src="img/backgrounds/item3.jpg" alt=""><span class="ba-block__title"></span>
+            </div>
+        </div>
+        <div class="ba-row">
+            <div class="ba-width-1-3 ba-block__item">
+                <img src="img/backgrounds/item4.jpg" alt=""><span class="ba-block__title"></span>
+            </div>
+            <div class="ba-width-1-3 ba-block__item">
+                <img src="img/backgrounds/item5.jpg" alt=""><span class="ba-block__title"></span>
+            </div>
+            <div class="ba-width-1-3 ba-block__item">
+                <img src="img/backgrounds/item6.jpg" alt=""><span class="ba-block__title"></span>
+            </div>
+        </div>
+    </div>
 </main>
 <footer class="ba-footer"></footer>
 
