--- a/index.html
+++ b/index.html
@@ -145,24 +145,30 @@
     <div class="ba-block">
         <div class="ba-row">
             <div class="ba-width-1-3 ba-block__item">
-                <img src="img/backgrounds/item1.jpg" alt=""><span class="ba-block__title"></span>
+                <img src="img/backgrounds/item1.jpg" alt="">
+                <span class="ba-block__title">topworkz</span>
             </div>
             <div class="ba-width-1-3 ba-block__item">
-                <img src="img/backgrounds/item2.jpg" alt=""><span class="ba-block__title"></span>
+                <img src="img/backgrounds/item2.jpg" alt="">
+                <span class="ba-block__title">joint</span>
             </div>
             <div class="ba-width-1-3 ba-block__item">
-                <img src="img/backgrounds/item3.jpg" alt=""><span class="ba-block__title"></span>
+                <img src="img/backgrounds/item3.jpg" alt="">
+                <span class="ba-block__title">market</span>
             </div>
         </div>
         <div class="ba-row">
             <div class="ba-width-1-3 ba-block__item">
-                <img src="img/backgrounds/item4.jpg" alt=""><span class="ba-block__title"></span>
+                <img src="img/backgrounds/item4.jpg" alt="">
+                <span class="ba-block__title">worktop</span>
             </div>
             <div class="ba-width-1-3 ba-block__item">
-                <img src="img/backgrounds/item5.jpg" alt=""><span class="ba-block__title"></span>
+                <img src="img/backgrounds/item5.jpg" alt="">
+                <span class="ba-block__title">lable</span>
             </div>
             <div class="ba-width-1-3 ba-block__item">
-                <img src="img/backgrounds/item6.jpg" alt=""><span class="ba-block__title"></span>
+                <img src="img/backgrounds/item6.jpg" alt="">
+                <span class="ba-block__title">kyiv</span>
             </div>
         </div>
     </div>
